// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleAddOrderRequest 1`] = `
Array [
  Array [
    Object {
      "method": "add",
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
      "requestor": "relayer",
      "signedOrder": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "status": "confirmed",
      "token": "code1",
    },
  ],
]
`;

exports[`handleAddOrderRequest 2`] = `
Array [
  Array [
    Object {},
    Object {
      "userOrder": "userOrder",
    },
    "add",
  ],
]
`;

exports[`handleAddOrderRequest invalid order 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "pair",
    },
    "invalid request",
  ],
]
`;

exports[`handleAddOrderRequest invalid order 2`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
    },
    "0xOrderHash",
    "invalid order",
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
    },
    "0xOrderHash",
    "",
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xInvalidOrderHash",
      "pair": "code1|code2",
    },
    "0xInvalidOrderHash",
    "0xOrderHash",
  ],
]
`;

exports[`handleAddOrderRequest invalid persist 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
    },
    "0xOrderHash",
    "invalid order",
  ],
]
`;

exports[`handleAddOrderRequest persist error 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
    },
    "0xOrderHash",
    "error",
  ],
]
`;

exports[`handleOrderBookRequest invalid method 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "subscribe",
      "pair": "pair",
    },
    "invalid request",
  ],
]
`;

exports[`handleOrderBookRequest subscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "subscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderBookRequest unsubscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "unsubscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderBookSubscribeRequest empty list 1`] = `
Array [
  Array [
    "pair",
    [Function],
  ],
]
`;

exports[`handleOrderBookSubscribeRequest empty list 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest empty list 3`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"snapshot\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookSnapshot\\":\\"snapshot\\"}",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest existing pair existing ws 1`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest existing pair existing ws 2`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"snapshot\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookSnapshot\\":\\"snapshot\\"}",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest existing pair new ws 1`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest existing pair new ws 2`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"snapshot\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookSnapshot\\":\\"snapshot\\"}",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair 1`] = `
Array [
  Array [
    "pair",
    [Function],
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair 2`] = `
Array [
  Array [
    "channel",
    "obsu",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair 3`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair 4`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"snapshot\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookSnapshot\\":\\"snapshot\\"}",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair no snapshot 1`] = `
Array [
  Array [
    "pair",
    [Function],
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair no snapshot 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair no snapshot 3`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "error",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest existing pair non existing ws 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest no more subscription 1`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest no more subscription 2`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest non existing pair 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderBookUpdate 1`] = `
Array [
  Array [
    "ws1",
    "{\\"method\\":\\"update\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"code1|code2\\",\\"orderBookUpdate\\":{\\"pair\\":\\"code1|code2\\"}}",
  ],
  Array [
    "ws2",
    "{\\"method\\":\\"update\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"code1|code2\\",\\"orderBookUpdate\\":{\\"pair\\":\\"code1|code2\\"}}",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest existing account new ws 1`] = `
Object {
  "account": Array [
    "ws",
    "ws1",
  ],
}
`;

exports[`handleOrderHistorySubscribeRequest existing account new ws 2`] = `
Array [
  Array [
    "ws1",
    "{\\"method\\":\\"history\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"pair\\":\\"\\",\\"orderHistory\\":[\\"userOrders\\"]}",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest existing account same ws 1`] = `
Object {
  "account": Array [
    "ws",
  ],
}
`;

exports[`handleOrderHistorySubscribeRequest existing account same ws 2`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"history\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"pair\\":\\"\\",\\"orderHistory\\":[\\"userOrders\\"]}",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest new account  1`] = `
Object {
  "account": Array [
    "ws",
  ],
}
`;

exports[`handleOrderHistorySubscribeRequest new account  2`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"history\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"pair\\":\\"\\",\\"orderHistory\\":[\\"userOrders\\"]}",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest new account  3`] = `
Array [
  Array [
    "code1|base1",
    [Function],
  ],
  Array [
    "code1|base2",
    [Function],
  ],
  Array [
    "code2|base1",
    [Function],
  ],
  Array [
    "code2|base2",
    [Function],
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest new account  4`] = `
Array [
  Array [
    "channel",
    "orderQueueItem",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest no web3Util 1`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"history\\",\\"channel\\":\\"orders\\",\\"status\\":\\"error\\",\\"pair\\":\\"\\"}",
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest existing account clean up 1`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "channel",
      "method": "method",
      "pair": "",
    },
    "ok",
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest existing account clean up 2`] = `
Array [
  Array [
    "code1|base1",
  ],
  Array [
    "code1|base2",
  ],
  Array [
    "code2|base1",
  ],
  Array [
    "code2|base2",
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest existing account clean up no web3Util 1`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "channel",
      "method": "method",
      "pair": "",
    },
    "ok",
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest existing account more than one 1`] = `
Object {
  "account": Array [
    "ws",
  ],
}
`;

exports[`handleOrderHistoryUnsubscribeRequest existing account more than one 2`] = `
Array [
  Array [
    "ws1",
    Object {
      "account": "account",
      "channel": "channel",
      "method": "method",
      "pair": "",
    },
    "ok",
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest new account 1`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "channel",
      "method": "method",
      "pair": "",
    },
    "ok",
  ],
]
`;

exports[`handleOrderRequest add 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "add",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderRequest invalid requests 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "add",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "add",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "account": "",
      "channel": "orders",
      "method": "subscribe",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "method",
      "pair": "pair",
    },
    "invalid request",
  ],
]
`;

exports[`handleOrderRequest subscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "orders",
      "method": "subscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderRequest terminate 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "terminate",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderRequest unsubscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "orders",
      "method": "unsubscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderUpdate requested existing pair existing account 1`] = `
Array [
  Array [
    "ws",
    "userOrder",
    "method",
  ],
  Array [
    "ws1",
    "userOrder",
    "method",
  ],
]
`;

exports[`handleTerminateOrderRequest 1`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "requestor": "relayer",
      "status": "confirmed",
    },
  ],
]
`;

exports[`handleTerminateOrderRequest 2`] = `
Array [
  Array [
    Object {},
    "userOrder",
    "terminate",
  ],
]
`;

exports[`handleTerminateOrderRequest invalid request and rawOrder does not exist 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHashes": Array [],
      "pair": "pair",
      "signature": "signature",
    },
    "invalid request",
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHashes": Array [
        "0xOrderHash",
      ],
      "pair": "pair",
      "signature": "signature",
    },
    "invalid request",
  ],
]
`;

exports[`handleTerminateOrderRequest invalid request and rawOrder does not exist 2`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHashes": Array [
        "0xOrderHash",
      ],
      "pair": "pair",
      "signature": "signature",
    },
    "0xOrderHash",
    "invalid order",
  ],
]
`;

exports[`handleTerminateOrderRequest persist error 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHashes": Array [
        "0xOrderHash",
      ],
      "pair": "pair",
      "signature": "signature",
    },
    "0xOrderHash",
    "error",
  ],
]
`;

exports[`handleTerminateOrderRequest persist error 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "requestor": "relayer",
      "status": "confirmed",
    },
  ],
]
`;

exports[`handleTerminateOrderRequest persist no return 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHashes": Array [
        "0xOrderHash",
      ],
      "pair": "pair",
      "signature": "signature",
    },
    "0xOrderHash",
    "invalid order",
  ],
]
`;

exports[`handleTerminateOrderRequest persist no return 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "requestor": "relayer",
      "status": "confirmed",
    },
  ],
]
`;

exports[`handleTerminateOrderRequest signature is wrong 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHashes": Array [
        "0xOrderHash",
      ],
      "pair": "pair",
      "signature": "siganature",
    },
    "0xOrderHash",
    "invalid order",
  ],
]
`;

exports[`handleTradeRequest invalid method 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "subscribe",
      "pair": "pair",
    },
    "invalid request",
  ],
]
`;

exports[`handleTradeRequest subscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "subscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleTradeRequest unsubscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "unsubscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleTradeSubscribeRequest empty list 1`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"trades\\",\\"channel\\":\\"trades\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"trades\\":[{\\"pair\\":\\"pair\\",\\"transactionHash\\":\\"txHash2\\",\\"taker\\":{\\"orderHash\\":\\"orderHash1\\",\\"address\\":\\"address\\",\\"side\\":\\"bid\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"maker\\":{\\"orderHash\\":\\"orderHash2\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"feeAsset\\":\\"aETH\\",\\"timestamp\\":1234567880},{\\"pair\\":\\"pair\\",\\"transactionHash\\":\\"txHash\\",\\"taker\\":{\\"orderHash\\":\\"orderHash1\\",\\"address\\":\\"address\\",\\"side\\":\\"bid\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"maker\\":{\\"orderHash\\":\\"orderHash2\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"feeAsset\\":\\"aETH\\",\\"timestamp\\":1234567890}]}",
  ],
]
`;

exports[`handleTradeSubscribeRequest existing pair existing ws 1`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"trades\\",\\"channel\\":\\"trades\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"trades\\":[{\\"pair\\":\\"pair\\",\\"transactionHash\\":\\"txHash2\\",\\"taker\\":{\\"orderHash\\":\\"orderHash1\\",\\"address\\":\\"address\\",\\"side\\":\\"bid\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"maker\\":{\\"orderHash\\":\\"orderHash2\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"feeAsset\\":\\"aETH\\",\\"timestamp\\":1234567880},{\\"pair\\":\\"pair\\",\\"transactionHash\\":\\"txHash\\",\\"taker\\":{\\"orderHash\\":\\"orderHash1\\",\\"address\\":\\"address\\",\\"side\\":\\"bid\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"maker\\":{\\"orderHash\\":\\"orderHash2\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"feeAsset\\":\\"aETH\\",\\"timestamp\\":1234567890}]}",
  ],
]
`;

exports[`handleTradeSubscribeRequest existing pair new ws 1`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"trades\\",\\"channel\\":\\"trades\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"trades\\":[{\\"pair\\":\\"pair\\",\\"transactionHash\\":\\"txHash2\\",\\"taker\\":{\\"orderHash\\":\\"orderHash1\\",\\"address\\":\\"address\\",\\"side\\":\\"bid\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"maker\\":{\\"orderHash\\":\\"orderHash2\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"feeAsset\\":\\"aETH\\",\\"timestamp\\":1234567880},{\\"pair\\":\\"pair\\",\\"transactionHash\\":\\"txHash\\",\\"taker\\":{\\"orderHash\\":\\"orderHash1\\",\\"address\\":\\"address\\",\\"side\\":\\"bid\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"maker\\":{\\"orderHash\\":\\"orderHash2\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"feeAsset\\":\\"aETH\\",\\"timestamp\\":1234567890}]}",
  ],
]
`;

exports[`handleTradeSubscribeRequest new pair 1`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"trades\\",\\"channel\\":\\"trades\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"trades\\":[{\\"pair\\":\\"pair\\",\\"transactionHash\\":\\"txHash2\\",\\"taker\\":{\\"orderHash\\":\\"orderHash1\\",\\"address\\":\\"address\\",\\"side\\":\\"bid\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"maker\\":{\\"orderHash\\":\\"orderHash2\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"feeAsset\\":\\"aETH\\",\\"timestamp\\":1234567880},{\\"pair\\":\\"pair\\",\\"transactionHash\\":\\"txHash\\",\\"taker\\":{\\"orderHash\\":\\"orderHash1\\",\\"address\\":\\"address\\",\\"side\\":\\"bid\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"maker\\":{\\"orderHash\\":\\"orderHash2\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"feeAsset\\":\\"aETH\\",\\"timestamp\\":1234567890}]}",
  ],
]
`;

exports[`handleTradeUnsubscribeRequest 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleTradeUnsubscribeRequest existing pair non existing ws 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleTradeUnsubscribeRequest no more subscription 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleTradeUnsubscribeRequest non existing pair 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleTradeUpdate empty ws list 1`] = `
Object {
  "pair": Array [
    Object {
      "pair": "pair",
    },
    Object {
      "pair": "pair",
    },
  ],
}
`;

exports[`handleTradeUpdate, have previous trades 1`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"update\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"trades\\":[{\\"pair\\":\\"pair\\",\\"transactionHash\\":\\"txHash2\\",\\"taker\\":{\\"orderHash\\":\\"orderHash1\\",\\"address\\":\\"address\\",\\"side\\":\\"bid\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"maker\\":{\\"orderHash\\":\\"orderHash2\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"feeAsset\\":\\"aETH\\",\\"timestamp\\":1234567880}]}",
  ],
]
`;

exports[`handleTradeUpdate, have previous trades 2`] = `
Object {
  "pair": Array [
    Object {
      "feeAsset": "aETH",
      "maker": Object {
        "amount": 20,
        "fee": 0.1,
        "orderHash": "orderHash2",
        "price": 0.01,
      },
      "pair": "pair",
      "taker": Object {
        "address": "address",
        "amount": 20,
        "fee": 0.1,
        "orderHash": "orderHash1",
        "price": 0.01,
        "side": "bid",
      },
      "timestamp": 1234567880,
      "transactionHash": "txHash2",
    },
    Object {
      "feeAsset": "aETH",
      "maker": Object {
        "amount": 20,
        "fee": 0.1,
        "orderHash": "orderHash2",
        "price": 0.01,
      },
      "pair": "pair",
      "taker": Object {
        "address": "address",
        "amount": 20,
        "fee": 0.1,
        "orderHash": "orderHash1",
        "price": 0.01,
        "side": "bid",
      },
      "timestamp": 1234567890,
      "transactionHash": "txHash",
    },
  ],
}
`;

exports[`handleTradeUpdate, no previous trades 1`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"update\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"trades\\":[{\\"pair\\":\\"pair\\",\\"transactionHash\\":\\"txHash\\",\\"taker\\":{\\"orderHash\\":\\"orderHash1\\",\\"address\\":\\"address\\",\\"side\\":\\"bid\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"maker\\":{\\"orderHash\\":\\"orderHash2\\",\\"price\\":0.01,\\"amount\\":20,\\"fee\\":0.1},\\"feeAsset\\":\\"aETH\\",\\"timestamp\\":1234567890}]}",
  ],
]
`;

exports[`handleTradeUpdate, no previous trades 2`] = `
Object {
  "pair": Array [
    Object {
      "feeAsset": "aETH",
      "maker": Object {
        "amount": 20,
        "fee": 0.1,
        "orderHash": "orderHash2",
        "price": 0.01,
      },
      "pair": "pair",
      "taker": Object {
        "address": "address",
        "amount": 20,
        "fee": 0.1,
        "orderHash": "orderHash1",
        "price": 0.01,
        "side": "bid",
      },
      "timestamp": 1234567890,
      "transactionHash": "txHash",
    },
  ],
}
`;

exports[`handleWebSocketClose 1`] = `
Array [
  Array [
    Object {
      "name": "ws",
      "on": [MockFunction],
    },
    "pair",
  ],
]
`;

exports[`handleWebSocketClose 2`] = `
Array [
  Array [
    Object {
      "name": "ws",
      "on": [MockFunction],
    },
    "account",
  ],
]
`;

exports[`handleWebSocketClose 3`] = `
Array [
  Array [
    Object {
      "name": "ws",
      "on": [MockFunction],
    },
    "pair",
  ],
]
`;

exports[`handleWebSocketConnection 1`] = `
Array [
  Array [
    Object {
      "name": "ws",
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "message",
            [Function],
          ],
          Array [
            "close",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "ip",
    "testMessage",
  ],
]
`;

exports[`handleWebSocketConnection 2`] = `
Array [
  Array [
    Object {
      "name": "ws",
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "message",
            [Function],
          ],
          Array [
            "close",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "ip",
  ],
]
`;

exports[`handleWebSocketMessage invalid requests 1`] = `
Array [
  Array [
    "ws",
    Object {},
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "invalid request",
  ],
]
`;

exports[`handleWebSocketMessage orderBooks 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orderBooks",
      "method": "method",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleWebSocketMessage orders 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "method",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleWebSocketMessage trades 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "trades",
      "method": "method",
      "pair": "pair",
    },
  ],
]
`;

exports[`initializeCache 1`] = `
Array [
  Array [
    [Function],
    3600000,
  ],
  Array [
    [Function],
    600000,
  ],
  Array [
    [Function],
    30000,
  ],
]
`;

exports[`initializeCache 2`] = `
Array [
  Array [
    Array [
      "token",
    ],
  ],
  Array [
    Array [
      "token",
    ],
  ],
]
`;

exports[`initializeWsServer 1`] = `
Array [
  Array [
    [Function],
    30000,
  ],
]
`;

exports[`initializeWsServer 2`] = `
Array [
  Array [
    "ws",
  ],
]
`;

exports[`initializeWsServer 3`] = `
Array [
  Array [
    "connection",
    [Function],
  ],
]
`;

exports[`initializeWsServer 4`] = `
Array [
  Array [
    "ws",
    "ip",
  ],
  Array [
    "ws",
    "ip",
  ],
]
`;

exports[`loadAndSubscribeMarketTrades 1`] = `
Array [
  Array [
    "code1|WETH",
    1227367890,
    1234567890,
  ],
  Array [
    "code2|WETH",
    1227367890,
    1234567890,
  ],
]
`;

exports[`loadAndSubscribeMarketTrades 2`] = `
Array [
  Array [
    "code1|WETH",
    [Function],
  ],
  Array [
    "code2|WETH",
    [Function],
  ],
]
`;

exports[`loadAndSubscribeMarketTrades 3`] = `
Object {
  "pair": Array [
    Object {
      "pair": "pair",
    },
  ],
}
`;

exports[`loadAndSubscribeMarketTrades 4`] = `
Array [
  Array [
    "channel",
    "trade",
  ],
]
`;

exports[`loadDuoAcceptedPrices 1`] = `
Array [
  Array [
    "0xf474e7E554D98a580282726434d1281aA273E87F",
    Array [
      "YYYY-MM-DD",
    ],
  ],
]
`;

exports[`loadDuoExchangePrices 1`] = `
Array [
  Array [
    "gdax",
    60,
    1148167890,
    0,
    "ETH|USD",
  ],
  Array [
    "gemini",
    60,
    1148167890,
    0,
    "ETH|USD",
  ],
  Array [
    "kraken",
    60,
    1148167890,
    0,
    "ETH|USD",
  ],
]
`;

exports[`sendErrorOrderResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"method\\",\\"channel\\":\\"channel\\",\\"status\\":\\"status\\",\\"pair\\":\\"pair\\",\\"orderHash\\":\\"0xOrderHash\\"}",
  ],
]
`;

exports[`sendInfo 1`] = `
Array [
  Array [
    "{\\"channel\\":\\"info\\",\\"method\\":\\"info\\",\\"status\\":\\"ok\\",\\"pair\\":\\"\\",\\"acceptedPrices\\":{\\"custodian\\":[\\"acceptedPrices\\"]},\\"exchangePrices\\":{},\\"tokens\\":[\\"token1\\"],\\"processStatus\\":[\\"status1\\"]}",
  ],
]
`;

exports[`sendInfo no web3Util 1`] = `
Array [
  Array [
    "{\\"channel\\":\\"info\\",\\"method\\":\\"info\\",\\"status\\":\\"ok\\",\\"pair\\":\\"\\",\\"acceptedPrices\\":{\\"custodian\\":[\\"acceptedPrices\\"]},\\"exchangePrices\\":{},\\"tokens\\":[],\\"processStatus\\":[\\"status1\\"]}",
  ],
]
`;

exports[`sendResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"method\\",\\"channel\\":\\"channel\\",\\"status\\":\\"status\\",\\"pair\\":\\"pair\\"}",
  ],
]
`;

exports[`sendUserOrderResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"type\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"userOrder\\":{\\"test\\":\\"liveOrder\\"}}",
  ],
]
`;
